docs(apis): added authed app api
added backend authed_app
added frontend authed_app
