# gen/app_frontend_api/authed_app/v1/authedapp.pb.validate.go
@@ -1,0 +1,386 @@
+// Code generated by protoc-gen-validate. DO NOT EDIT.
+// source: app_frontend_api/authed_app/v1/authedapp.proto
+
+package authed_appv1
+
+import (
+	"bytes"
+	"errors"
+	"fmt"
+	"net"
+	"net/mail"
+	"net/url"
+	"regexp"
+	"sort"
+	"strings"
+	"time"
+	"unicode/utf8"
+
+	"google.golang.org/protobuf/types/known/anypb"
+)
+
+// ensure the imports are used
+var (
+	_ = bytes.MinRead
+	_ = errors.New("")
+	_ = fmt.Print
+	_ = utf8.UTFMax
+	_ = (*regexp.Regexp)(nil)
+	_ = (*strings.Reader)(nil)
+	_ = net.IPv4len
+	_ = time.Duration(0)
+	_ = (*url.URL)(nil)
+	_ = (*mail.Address)(nil)
+	_ = anypb.Any{}
+	_ = sort.Sort
+)
+
+// Validate checks the field values on ValidAppRequest with the rules defined
+// in the proto definition for this message. If any rules are violated, the
+// first error encountered is returned, or nil if there are no violations.
+func (m *ValidAppRequest) Validate() error {
+	return m.validate(false)
+}
+
+// ValidateAll checks the field values on ValidAppRequest with the rules
+// defined in the proto definition for this message. If any rules are
+// violated, the result is a list of violation errors wrapped in
+// ValidAppRequestMultiError, or nil if none found.
+func (m *ValidAppRequest) ValidateAll() error {
+	return m.validate(true)
+}
+
+func (m *ValidAppRequest) validate(all bool) error {
+	if m == nil {
+		return nil
+	}
+
+	var errors []error
+
+	// no validation rules for Id
+
+	// no validation rules for Project
+
+	// no validation rules for Check
+
+	// no validation rules for Backend
+
+	if len(errors) > 0 {
+		return ValidAppRequestMultiError(errors)
+	}
+
+	return nil
+}
+
+// ValidAppRequestMultiError is an error wrapping multiple validation errors
+// returned by ValidAppRequest.ValidateAll() if the designated constraints
+// aren't met.
+type ValidAppRequestMultiError []error
+
+// Error returns a concatenation of all the error messages it wraps.
+func (m ValidAppRequestMultiError) Error() string {
+	var msgs []string
+	for _, err := range m {
+		msgs = append(msgs, err.Error())
+	}
+	return strings.Join(msgs, "; ")
+}
+
+// AllErrors returns a list of validation violation errors.
+func (m ValidAppRequestMultiError) AllErrors() []error { return m }
+
+// ValidAppRequestValidationError is the validation error returned by
+// ValidAppRequest.Validate if the designated constraints aren't met.
+type ValidAppRequestValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e ValidAppRequestValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e ValidAppRequestValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e ValidAppRequestValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e ValidAppRequestValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e ValidAppRequestValidationError) ErrorName() string { return "ValidAppRequestValidationError" }
+
+// Error satisfies the builtin error interface
+func (e ValidAppRequestValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sValidAppRequest.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = ValidAppRequestValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = ValidAppRequestValidationError{}
+
+// Validate checks the field values on ValidAppResponse with the rules defined
+// in the proto definition for this message. If any rules are violated, the
+// first error encountered is returned, or nil if there are no violations.
+func (m *ValidAppResponse) Validate() error {
+	return m.validate(false)
+}
+
+// ValidateAll checks the field values on ValidAppResponse with the rules
+// defined in the proto definition for this message. If any rules are
+// violated, the result is a list of violation errors wrapped in
+// ValidAppResponseMultiError, or nil if none found.
+func (m *ValidAppResponse) ValidateAll() error {
+	return m.validate(true)
+}
+
+func (m *ValidAppResponse) validate(all bool) error {
+	if m == nil {
+		return nil
+	}
+
+	var errors []error
+
+	// no validation rules for Error
+
+	if all {
+		switch v := interface{}(m.GetApp()).(type) {
+		case interface{ ValidateAll() error }:
+			if err := v.ValidateAll(); err != nil {
+				errors = append(errors, ValidAppResponseValidationError{
+					field:  "App",
+					reason: "embedded message failed validation",
+					cause:  err,
+				})
+			}
+		case interface{ Validate() error }:
+			if err := v.Validate(); err != nil {
+				errors = append(errors, ValidAppResponseValidationError{
+					field:  "App",
+					reason: "embedded message failed validation",
+					cause:  err,
+				})
+			}
+		}
+	} else if v, ok := interface{}(m.GetApp()).(interface{ Validate() error }); ok {
+		if err := v.Validate(); err != nil {
+			return ValidAppResponseValidationError{
+				field:  "App",
+				reason: "embedded message failed validation",
+				cause:  err,
+			}
+		}
+	}
+
+	if len(errors) > 0 {
+		return ValidAppResponseMultiError(errors)
+	}
+
+	return nil
+}
+
+// ValidAppResponseMultiError is an error wrapping multiple validation errors
+// returned by ValidAppResponse.ValidateAll() if the designated constraints
+// aren't met.
+type ValidAppResponseMultiError []error
+
+// Error returns a concatenation of all the error messages it wraps.
+func (m ValidAppResponseMultiError) Error() string {
+	var msgs []string
+	for _, err := range m {
+		msgs = append(msgs, err.Error())
+	}
+	return strings.Join(msgs, "; ")
+}
+
+// AllErrors returns a list of validation violation errors.
+func (m ValidAppResponseMultiError) AllErrors() []error { return m }
+
+// ValidAppResponseValidationError is the validation error returned by
+// ValidAppResponse.Validate if the designated constraints aren't met.
+type ValidAppResponseValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e ValidAppResponseValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e ValidAppResponseValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e ValidAppResponseValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e ValidAppResponseValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e ValidAppResponseValidationError) ErrorName() string { return "ValidAppResponseValidationError" }
+
+// Error satisfies the builtin error interface
+func (e ValidAppResponseValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sValidAppResponse.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = ValidAppResponseValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = ValidAppResponseValidationError{}
+
+// Validate checks the field values on AuthedApp with the rules defined in the
+// proto definition for this message. If any rules are violated, the first
+// error encountered is returned, or nil if there are no violations.
+func (m *AuthedApp) Validate() error {
+	return m.validate(false)
+}
+
+// ValidateAll checks the field values on AuthedApp with the rules defined in
+// the proto definition for this message. If any rules are violated, the
+// result is a list of violation errors wrapped in AuthedAppMultiError, or nil
+// if none found.
+func (m *AuthedApp) ValidateAll() error {
+	return m.validate(true)
+}
+
+func (m *AuthedApp) validate(all bool) error {
+	if m == nil {
+		return nil
+	}
+
+	var errors []error
+
+	// no validation rules for Id
+
+	// no validation rules for AppId
+
+	// no validation rules for Name
+
+	// no validation rules for Backend
+
+	// no validation rules for Manage
+
+	// no validation rules for Attrs
+
+	if len(errors) > 0 {
+		return AuthedAppMultiError(errors)
+	}
+
+	return nil
+}
+
+// AuthedAppMultiError is an error wrapping multiple validation errors returned
+// by AuthedApp.ValidateAll() if the designated constraints aren't met.
+type AuthedAppMultiError []error
+
+// Error returns a concatenation of all the error messages it wraps.
+func (m AuthedAppMultiError) Error() string {
+	var msgs []string
+	for _, err := range m {
+		msgs = append(msgs, err.Error())
+	}
+	return strings.Join(msgs, "; ")
+}
+
+// AllErrors returns a list of validation violation errors.
+func (m AuthedAppMultiError) AllErrors() []error { return m }
+
+// AuthedAppValidationError is the validation error returned by
+// AuthedApp.Validate if the designated constraints aren't met.
+type AuthedAppValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e AuthedAppValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e AuthedAppValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e AuthedAppValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e AuthedAppValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e AuthedAppValidationError) ErrorName() string { return "AuthedAppValidationError" }
+
+// Error satisfies the builtin error interface
+func (e AuthedAppValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sAuthedApp.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = AuthedAppValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = AuthedAppValidationError{}
